--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,8 @@ jobs:
     name: Python ${{ matrix.python-version }}
     strategy:
       matrix:
-        python-version: ["3.9", "3.10.4"]
+#        python-version: ["3.9", "3.10.4"]
+        python-version: ["3.9"]
       fail-fast: true
     steps:
       - uses: actions/checkout@v2
