--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,5 +19,5 @@ pytest = "^7.3.1"
 flask_restful = "^0.3.9"
 
 [build-system]
-requires = ["poetry==1.4.2"]
+requires = ["poetry-core>=1.5.2"]
 build-backend = "poetry.core.masonry.api"
