--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,15 +5,14 @@ on:
     types: [ published ]
 
 jobs:
-  publish-service-client-package:
+  publish-flask-pypprof-package:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+#    permissions:
+#      contents: write
     steps:
       - name: Publish PyPi package
-        uses: code-specialist/pypi-poetry-publish@v1
+        uses: celsiusnarhwal/poetry-publish@v2
         with:
-          poetry_version: 1.5.1
-          BRANCH: main
-          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PUBLISH_REGISTRY_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+          poetry-version: 1.5.1
+          token: ${{ secrets.GITHUB_TOKEN }}
+#          PUBLISH_REGISTRY_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
