--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,8 @@ jobs:
 #    permissions:
 #      contents: write
     steps:
+      - uses: actions/checkout@v3
+
       - name: Publish PyPi package
         uses: celsiusnarhwal/poetry-publish@v2
         with:
