--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,5 +17,5 @@ jobs:
         with:
           python-version: 3.10.4
           poetry-version: 1.5.1
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PYPI_API_TOKEN }}
 #          PUBLISH_REGISTRY_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
