--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "flask_pypprof"}]
 
 [tool.poetry.dependencies]
-python = ">3.8"
+python = ">=3.8 <3.11"
 zprofile = "1.0.12"
 protobuf = "^3.20"
 mprofile = "0.0.15"
@@ -16,7 +16,6 @@ flask = "^2.3.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3.1"
-flask_restful = "^0.3.9"
 
 [build-system]
 requires = ["poetry-core"]
