--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "flask-pypprof"
-version = "v0.1.15"
+version = "v0.1.16"
 description = "Pypprof Flask wrapper"
 authors = ["Diego <diegolparra@gmail.com>"]
 readme = "README.md"
@@ -12,7 +12,7 @@ flask = "^2.1.3"
 
 zprofile = { version = "1.0.12", platform = "linux" }
 protobuf = { version = "^3.20", platform = "linux" }
-mprofile = { version = "0.0.15", platform = "linux" }
+mprofile = { version = "0.0.15", markers = "sys_platform == 'linux' and platform_machine == 'x86_64'" }
 pypprof = { version = "0.0.1", platform = "linux" }
 
 [tool.poetry.dev-dependencies]
