--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "flask-pypprof"
-version = "v0.1.16"
+version = "v0.1.17"
 description = "Pypprof Flask wrapper"
 authors = ["Diego <diegolparra@gmail.com>"]
 readme = "README.md"
@@ -10,10 +10,10 @@ packages = [{ include = "flask_pypprof" }]
 python = ">=3.8 <3.11"
 flask = "^2.1.3"
 
-zprofile = { version = "1.0.12", platform = "linux" }
-protobuf = { version = "^3.20", platform = "linux" }
+zprofile = { version = "1.0.12", markers = "sys_platform == 'linux' and platform_machine == 'x86_64'" }
+protobuf = { version = "^3.20", markers = "sys_platform == 'linux' and platform_machine == 'x86_64'" }
 mprofile = { version = "0.0.15", markers = "sys_platform == 'linux' and platform_machine == 'x86_64'" }
-pypprof = { version = "0.0.1", platform = "linux" }
+pypprof = { version = "0.0.1", markers = "sys_platform == 'linux' and platform_machine == 'x86_64'" }
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3.1"
