--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,16 @@
 [tool.poetry]
 name = "flask-pypprof"
-version = "v0.1.17"
+version = "v0.1.18"
 description = "Pypprof Flask wrapper"
 authors = ["Diego <diegolparra@gmail.com>"]
 readme = "README.md"
 packages = [{ include = "flask_pypprof" }]
 
 [tool.poetry.dependencies]
-python = ">=3.8 <3.11"
+python = ">=3.8 <=3.11"
 flask = "^2.1.3"
 
-zprofile = { version = "1.0.12", markers = "sys_platform == 'linux' and platform_machine == 'x86_64'" }
+zprofile = { version = "1.0.13", markers = "sys_platform == 'linux' and platform_machine == 'x86_64'" }
 protobuf = { version = "^3.20", markers = "sys_platform == 'linux' and platform_machine == 'x86_64'" }
 mprofile = { version = "0.0.15", markers = "sys_platform == 'linux' and platform_machine == 'x86_64'" }
 pypprof = { version = "0.0.1", markers = "sys_platform == 'linux' and platform_machine == 'x86_64'" }
